--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -222,6 +222,10 @@ ul.social-menu {
 /* MEDIA QUERIES */
 @include breakpoint(small only) {
 	button.large, .button.large {font-size: rem-calc(16);}
+	iframe {
+		max-width: 100%;
+		height: auto;
+	}
 }
 
 @include breakpoint(medium down) {}
